030-software/fluxcd/apps/pod-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pod-gateway
  labels:
    pod-security.kubernetes.io/enforce: privileged
