030-software/fluxcd/apps/pod-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-gateway
spec:
  type: ClusterIP
  ports:
    - port: 67
      targetPort: dhcp
      protocol: UDP
      name: dhcp
    - port: 8472
      targetPort: vxlan
      protocol: UDP
      name: vxlan
    - port: 4789
      targetPort: cilium
      protocol: UDP
      name: cilium
  # - port: 9091
  #   targetPort: vector
  #   protocol: TCP
  #   name: vector
  selector:
    app: pod-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: pod-gateway-webhook
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: pod-gateway-webhook
