030-software/fluxcd/apps/pod-gateway/mutatingwebhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-gateway
  annotations:
    cert-manager.io/inject-ca-from: pod-gateway/pod-gateway-webhook-tls
webhooks:
- name: pod-gateway.svc.cluster.local
  namespaceSelector:
    matchLabels:
      routed-gateway: "true"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: pod-gateway
      name: pod-gateway-webhook
      path: /wh/mutating/setgateway
      port: 8080
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
